--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -24,7 +24,7 @@
 
 \subsubsection{Custom Notation}
 \begin{description}
-  \item[$\mathbb{A}$] The set of service accounts. See equation \ref{eq:serviceaccount}.
+  \item[$\serviceaccount$] The set of service accounts. See equation \ref{eq:serviceaccount}.
   \item[$\mathbb{B}$] The set of Boolean sequences/bitstrings. Subscript denotes length. See section \ref{sec:sequences}.
   \item[$\mathbb{C}$] The set of seal-key tickets. See equation \ref{eq:ticket}. \emph{Not used as the set of complex numbers.}
   \item[$\mathbb{D}$] The set of dictionaries. See section \ref{sec:dictionaries}.
@@ -47,18 +47,18 @@
     \item[$\H_B$] The set of Bandersnatch public keys. A subset of $\Y_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
     \item[$\H_E$] The set of Ed25519 public keys. A subset of $\Y_{32}$. See section \ref{sec:signing}.
   \end{description}
-  \item[$\mathbb{I}$] The set of work items. See equation \ref{eq:workitem}.
+  \item[$\workitem$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\mathbb{J}$] The set of work execution errors.
   \item[$\mathbb{K}$] The set of validator key-sets. See equation \ref{eq:validatorkeys}.
   \item[$\mathbb{L}$] The set of work-digests.
   \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. See equation \ref{eq:pvmmemory}.
   \item[$\operandtuple$] The accumulation operand element, corresponding to a single work-item.
-  \item[$\mathbb{P}$] The set of work-packages. See equation \ref{eq:workpackage}.
+  \item[$\workpackage$] The set of work-packages. See equation \ref{eq:workpackage}.
   \item[$\avspec$] The set of availability specifications.
   \item[$\mathbb{T}$] The set of deferred transfers.
   \item[$\mathbb{U}$] The set of partial state, used during accumulation. See equation \ref{eq:partialstate}.  \item[$\mathbb{V}_{\memory}$] The set of validly readable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
   \item[$\mathbb{V}^*_{\memory}$] The set of validly writable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
-  \item[$\mathbb{W}$] The set of work-reports.
+  \item[$\workreport$] The set of work-reports.
   \item[$\mathbb{X}$] The set of refinement contexts.
   \item[$\Y$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
   \begin{description}
@@ -195,7 +195,7 @@ Without any superscript, the block is assumed to the block being imported or, if
 
 Here, the prime annotation indicates posterior state. Individual components may be identified with a letter subscript.
 \begin{description}
-  \item[$\alpha$] The core $\alpha$uthorizations pool. See equation \ref{eq:authstatecomposition}. %	α
+  \item[$\authpool$] The core $\authpool$uthorizations pool. See equation \ref{eq:authstatecomposition}. %	α
   \item[$\beta$] Log of recent activity. See equation \ref{eq:recenthistory}. %	β
   \begin{description}
     \item[$\recenthistory$] Information on the most recent blocks.
@@ -232,7 +232,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
     \item[$\wonkyset$] Work-reports whose validity is judged to be unknowable.
     \item[$\offenders$] Validators who made a judgment found to be incorrect.
   \end{description}
-  \item[$\chi$] The privileged service indices. %	χ
+  \item[$\privileges$] The privileged service indices. %	χ
   \begin{description}
     \item[$\manager$] The index of the blessed service.
     \item[$\delegator$] The index of the designate service.
