--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -36,7 +36,7 @@ The final state transition for $\recenthistory$ appends a new item including the
       \is{b}{\mathcal{M}_R(\beefybelt')},
       \is{s}{\H^0}
       }}}^\mathsf{H} \\
-    \where \mathbf{p} &= \{ ((g_w)_s)_h \mapsto ((g_w)_s)_e \mid g \in \xtguarantees \}
+    \where \mathbf{p} &= \{ ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash \mapsto ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot \mid g \in \xtguarantees \}
   \end{aligned}
 \end{equation}
 
