--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -5,28 +5,28 @@ As we already noted, a service in \Jam is somewhat analogous to a smart contract
 Service accounts are held in state under $\delta$, a partial mapping from a service identifier $\N_S$ into a tuple of named elements which specify the attributes of the service relevant to the \Jam protocol. Formally:
 \begin{align}\label{eq:serviceaccounts}
   \N_S &\equiv \N_{2^{32}} \\
-  \delta &\in \dict{\N_S}{\mathbb{A}}
+  \delta &\in \dict{\N_S}{\serviceaccount}
 \end{align}
 
-The service account is defined as the tuple of storage dictionary $\mathbf{s}$, preimage lookup dictionaries $\mathbf{p}$ and $\mathbf{l}$, code hash $c$, balance $b$ and gratis storage offset $f$, as well as the two code gas limits $g$ \& $m$. We also record certain usage characteristics concerning the account: the time slot at creation $r$, the time slot at the most recent accumulation $a$ and the parent service $p$. Formally:
+The service account is defined as the tuple of storage dictionary $\mathbf{s}$, preimage lookup dictionaries $\sa¬preimages$ and $\sa¬requests$, code hash $\sa¬codehash$, balance $\sa¬balance$ and gratis storage offset $\sa¬gratis$, as well as the two code gas limits $\sa¬minaccgas$ \& $\sa¬minmemogas$. We also record certain usage characteristics concerning the account: the time slot at creation $\sa¬created$, the time slot at the most recent accumulation $\sa¬lastacc$ and the parent service $\sa¬parent$. Formally:
 \begin{align}\label{eq:serviceaccount}
-  \mathbb{A} \equiv \tuple{\ \begin{aligned}
-    \mathbf{s} &\in \dict{\Y}{\Y}\,,\ 
-    \mathbf{p} \in \dict{\H}{\Y}\,,\\
-    \mathbf{l} &\in \dict{\tuple{\H,\N_L}}{\seq{\N_T}_{:3}}\,,\\
-    f &\in \N_B\,,\ 
-    c \in \H\,,\ 
-    b \in \N_B\,,\ 
-    g \in \N_G\,,\\
-    m &\in \N_G\,,\ 
-    r \in \N_T\,,\ 
-    a \in \N_T\,,\ 
-    p \in \N_S\\
+  \serviceaccount \equiv \tuple{\ \begin{aligned}
+    \sa¬storage &\in \dict{\Y}{\Y}\,,\ 
+    \sa¬preimages \in \dict{\H}{\Y}\,,\\
+    \sa¬requests &\in \dict{\tuple{\H,\N_L}}{\seq{\N_T}_{:3}}\,,\\
+    \sa¬gratis &\in \N_B\,,\ 
+    \sa¬codehash \in \H\,,\ 
+    \sa¬balance \in \N_B\,,\ 
+    \sa¬minaccgas \in \N_G\,,\\
+    \sa¬minmemogas &\in \N_G\,,\ 
+    \sa¬created \in \N_T\,,\ 
+    \sa¬lastacc \in \N_T\,,\ 
+    \sa¬parent \in \N_S\\
     %i, o, f
   \end{aligned}\,}
 \end{align}
 
-Thus, the balance of the service of index $s$ would be denoted $\delta[s]_b$ and the storage item of key $\mathbf{k} \in \Y$ for that service is written $\delta[s]_\mathbf{s}[\mathbf{k}]$.
+Thus, the balance of the service of index $s$ would be denoted $\delta[s]_\sa¬balance$ and the storage item of key $\mathbf{k} \in \Y$ for that service is written $\delta[s]_\sa¬storage[\mathbf{k}]$.
 
 
 
@@ -39,8 +39,8 @@ Thus, the balance of the service of index $s$ would be denoted $\delta[s]_b$ and
 
 The code and associated metadata of a service account is identified by a hash which, if the service is to be functional, must be present within its preimage lookup (see section \ref{sec:lookups}) and have a preimage which is a proper encoding of the two blobs. We thus define the actual code $\mathbf{c}$ and metadata $\mathbf{m}$:
 \begin{align}
-  \forall \mathbf{a} \in \mathbb{A} : \tup{\mathbf{a}_\mathbf{m}, \mathbf{a}_\mathbf{c}} \equiv \begin{cases}
-    \tup{\mathbf{m}, \mathbf{c}} &\when \se(\var{\mathbf{m}}, \mathbf{c}) = \mathbf{a}_\mathbf{p}[\mathbf{a}_c] \\
+  \forall \mathbf{a} \in \serviceaccount : \tup{\mathbf{a}_\mathbf{m}, \mathbf{a}_\mathbf{c}} \equiv \begin{cases}
+    \tup{\mathbf{m}, \mathbf{c}} &\when \se(\var{\mathbf{m}}, \mathbf{c}) = \mathbf{a}_\sa¬preimages[\mathbf{a}_\sa¬codehash] \\
     \tup{\none, \none} &\otherwise
   \end{cases}
 \end{align}
@@ -81,7 +81,7 @@ Restated, we must be able to define some \emph{historical} lookup function $\Lam
 \begin{equation}
 \begin{aligned}
   \Lambda\colon \left\{\ \begin{aligned}
-    (\mathbb{A}, \N_{\mathbf{H}_t - \mathsf{D}\dots\mathbf{H}_t}, \mathbb{H}) &\to \mathbb{Y}\bm{?} \\
+    (\serviceaccount, \N_{\mathbf{H}_t - \mathsf{D}\dots\mathbf{H}_t}, \mathbb{H}) &\to \mathbb{Y}\bm{?} \\
     (\mathbf{a}, t, \hash(\mathbf{p})) &\mapsto v : v \in \{ \mathbf{p}, \none \}
   \end{aligned}\right.
 \end{aligned}
@@ -89,15 +89,15 @@ Restated, we must be able to define some \emph{historical} lookup function $\Lam
 
 This function is defined shortly below in equation \ref{eq:historicallookup}.
 
-The preimage lookup for some service of index $s$ is denoted $\delta[s]_\mathbf{p}$ is a dictionary mapping a hash to its corresponding preimage. Additionally, there is metadata associated with the lookup denoted $\delta[s]_\mathbf{l}$ which is a dictionary mapping some hash and presupposed length into historical information.
+The preimage lookup for some service of index $s$ is denoted $\delta[s]_\sa¬preimages$ is a dictionary mapping a hash to its corresponding preimage. Additionally, there is metadata associated with the lookup denoted $\delta[s]_\sa¬requests$ which is a dictionary mapping some hash and presupposed length into historical information.
 
 \subsubsection{Invariants}
 
 The state of the lookup system naturally satisfies a number of invariants. Firstly, any preimage value must correspond to its hash, equation \ref{eq:preimageconstraints}. Secondly, a preimage value being in state implies that its hash and length pair has some associated status, also in equation \ref{eq:preimageconstraints}. Formally:
 \begin{equation}\label{eq:preimageconstraints}
-  \forall a \in \mathbb{A}, (h \mapsto \mathbf{p}) \in a_\mathbf{p} \Rightarrow
-    h = \hash(\mathbf{p})\wedge
-    \tup{h \ts |\mathbf{p}|} \in \keys{a_\mathbf{l}}
+  \forall \mathbf{a} \in \serviceaccount, (h \mapsto \mathbf{d}) \in \mathbf{a}_\sa¬preimages \Rightarrow
+    h = \hash(\mathbf{d})\wedge
+    \tup{h \ts |\mathbf{d}|} \in \keys{\mathbf{a}_\sa¬requests}
 \end{equation}
 
 \subsubsection{Semantics}
@@ -113,9 +113,9 @@ The historical status component $h \in \seq{\N_T}_{:3}$ is a sequence of up to t
 The historical lookup function $\Lambda$ may now be defined as:
 \begin{equation}
   \begin{aligned}\label{eq:historicallookup}
-    &\Lambda\colon (\mathbb{A}, \N_T, \H) \to \Y\bm{?} \\
+    &\Lambda\colon (\serviceaccount, \N_T, \H) \to \Y\bm{?} \\
     &\Lambda(\mathbf{a}, t, h) \equiv \begin{cases}
-      \mathbf{a}_\mathbf{p}[h]\!\!\!\! &\when h \in \keys{\mathbf{a}_\mathbf{p}} \wedge I(\mathbf{a}_\mathbf{l}[h, |\mathbf{a}_\mathbf{p}[h]|], t) \!\!\!\!\! \\
+      \mathbf{a}_\sa¬preimages[h]\!\!\!\! &\when h \in \keys{\mathbf{a}_\sa¬preimages} \wedge I(\mathbf{a}_\sa¬requests[h, |\mathbf{a}_\sa¬preimages[h]|], t) \!\!\!\!\! \\
       \none &\otherwise
     \end{cases}\\
     &\where I(\mathbf{l}, t) = \begin{cases}
@@ -141,24 +141,23 @@ Furthermore, as we will see in the account serialization function in section \re
 
 We may then define a second dependent term $t$, the minimum, or \emph{threshold}, balance needed for any given service account in terms of its storage footprint.
 \begin{align}
-  \forall a \in \mathcal{V}(\delta):\left\{\begin{aligned}
-    a_i \in \N_{2^{32}} &\equiv 2\cdot|\,a_\mathbf{l}\,| + |\,a_\mathbf{s}\,| \\
-    a_o \in \N_{2^{64}} &\equiv \sum\limits_{\,(h, z) \in \keys{a_\mathbf{l}}\,} \!\!\!\!81 + z \\
-    &\phantom{\equiv\ } + \sum\limits_{(x, y) \in a_\mathbf{s}} 34 + |y| + |x| \\
-    a_t \in \N_B &\equiv \max(0, \mathsf{B}_S + \mathsf{B}_I \cdot a_i + \mathsf{B}_L \cdot a_o - a_f)
+  \forall \mathbf{a} \in \mathcal{V}(\delta):\left\{\begin{aligned}
+    \mathbf{a}_\sa¬items \in \N_{2^{32}} &\equiv 2\cdot|\,\mathbf{a}_\sa¬requests\,| + |\,\mathbf{a}_\sa¬storage\,| \\
+    \mathbf{a}_\sa¬octets \in \N_{2^{64}} &\equiv \sum\limits_{\,(h, z) \in \keys{\mathbf{a}_\sa¬requests}\,} \!\!\!\!81 + z \\
+    &\phantom{\equiv\ } + \sum\limits_{(x, y) \in \mathbf{a}_\sa¬storage} 34 + |y| + |x| \\
+    \mathbf{a}_\sa¬minbalance \in \N_B &\equiv \max(0, \mathsf{B}_S + \mathsf{B}_I \cdot \mathbf{a}_\sa¬items + \mathsf{B}_L \cdot \mathbf{a}_\sa¬octets - \mathbf{a}_\sa¬gratis)
   \end{aligned}\right.
 \end{align}
 
 
 
 
-
 \subsection{Service Privileges}
-\Jam includes the ability to bestow privileges on a number of services. The portion of state in which this is held is denoted $\chi$ and includes four kinds of privilege. The first, $\manager$, is the index of the \emph{manager} service which is the service able to effect an alteration of $\chi$ from block to block as well as bestow services with storage deposit credits. The following, $\assigners$, are the service indices capable of altering the authorizer queue $\varphi$, one for each core. The next, $\delegator$, is able to set $\iota$.
+\Jam includes the ability to bestow privileges on a number of services. The portion of state in which this is held is denoted $\privileges$ and includes four kinds of privilege. The first, $\manager$, is the index of the \emph{manager} service which is the service able to effect an alteration of $\privileges$ from block to block as well as bestow services with storage deposit credits. The following, $\assigners$, are the service indices capable of altering the authorizer queue $\varphi$, one for each core. The next, $\delegator$, is able to set $\iota$.
 
 Finally, $\alwaysaccers$ is a small dictionary containing the indices of services which automatically accumulate in each block together with a basic amount of gas with which each accumulates. Formally:
 \begin{align}
-  \chi \equiv \tuple{
+  \privileges \equiv \tuple{
     \isa{\manager}{\N_S} ,
     \isa{\assigners}{\seq{\N_S}_\mathsf{C}} ,
     \isa{\delegator}{\N_S} ,
