--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -150,18 +150,18 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
   \se(x \in \mathbb{X}) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\var{x_\mathbf{p}})\\
   \se(x \in \avspec) &\equiv \se(x_h) \concat \se_4(x_l)\concat\se(x_u, x_e) \concat \se_2(x_n) \\
   \se(x \in \mathbb{L}) &\equiv \se(\se_4(x_s), x_c, x_y, \se_8(x_g), x_u, x_i, x_x, x_z, x_e, \seresult(x_\wl¬result))\\
-  \se(x \in \mathbb{W}) &\equiv \se(x_s, x_x, x_c, x_a, x_g, \var{x_\wr¬authtrace}, \var{x_\mathbf{l}}, \var{x_\wr¬digests}) \\
-  \se(x \in \mathbb{P}) &\equiv \se(\se_4(x_\wp¬authcodehost), x_\wp¬authcodehash, x_\wp¬context, \var{x_\wp¬authtoken}, \var{x_\wp¬authconfig}, \var{x_\wp¬workitems}) \\
+  \se(x \in \workreport) &\equiv \se(x_s, x_x, x_c, x_a, x_g, \var{x_\wr¬authtrace}, \var{x_\mathbf{l}}, \var{x_\wr¬digests}) \\
+  \se(x \in \workpackage) &\equiv \se(\se_4(x_\wp¬authcodehost), x_\wp¬authcodehash, x_\wp¬context, \var{x_\wp¬authtoken}, \var{x_\wp¬authconfig}, \var{x_\wp¬workitems}) \\
   % TODO: \se_4(i) should be just \se(i), but we should wait for this to be written.
-  \se(x \in \mathbb{I}) &\equiv \se(
-    \se_4(x_s),
-    x_c,
-    \se_8(x_g),
-    \se_8(x_a),
-    \se_2(x_e)
-    \var{x_\mathbf{y}},
-    \var{\se_I^\#(x_\mathbf{i})},
-    \var{\sq{(h, \se_4(i)) \mid (h, i) \orderedin x_\mathbf{x}}},
+  \se(x \in \workitem) &\equiv \se(
+    \se_4(x_\wi¬service),
+    x_\wi¬codehash,
+    \se_8(x_\wi¬refgaslimit),
+    \se_8(x_\wi¬accgaslimit),
+    \se_2(x_\wi¬exportcount)
+    \var{x_\wi¬payload},
+    \var{\se_I^\#(x_\wi¬importsegments)},
+    \var{\sq{\tup{h, \se_4(i)} \mid \tup{h, i} \orderedin x_\wi¬extrinsics}},
   ) \\
   \se(x \in \mathbb{C}) &\equiv \se(x_\mathbf{y}, x_r) \\
   \se(x \in \defxfer) &\equiv \se(\se_4(x_s), \se_4(x_d), \se_8(x_a), \se(x_m), \se_8(x_g)) \\
